[package]
name = "front-line-router"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Traits and utilities for the front-line http router"
repository = "https://github.com/plasmaconduit/front-line/"
readme = "../README.md"

[dependencies]
memchr = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
front-line-derive = { version = "0.1.0", path = "../front-line-derive" }
rstest = { workspace = true }
